[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/buttons/inventario.png" type="Texture" id=1]
[ext_resource path="res://addons/rmsmartshape/assets/GUI_Theme.tres" type="Theme" id=2]
[ext_resource path="res://src/scenes/MenuScene/Reliquias.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/items/big_llama.png" type="Texture" id=5]
[ext_resource path="res://assets/items/big_amulet.png" type="Texture" id=6]
[ext_resource path="res://assets/items/llama.png" type="Texture" id=7]
[ext_resource path="res://assets/items/amuleto.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.576471, 0.0352941, 0.0352941, 1 )
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.905882, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 10
shadow_offset = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.576471, 0.0352941, 0.0352941, 0 )
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 10
shadow_offset = Vector2( 1, 1 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 50
outline_color = Color( 0.0941176, 0.0745098, 0.0745098, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Reliquias" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
input_pass_on_modal_close_click = false
color = Color( 0, 0, 0, 0.717647 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="Slots" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Amulet" type="Button" parent="Slots"]
margin_left = 681.0
margin_top = 296.0
margin_right = 861.0
margin_bottom = 490.0
rect_scale = Vector2( 1.02917, 0.959573 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 3 )

[node name="icon" type="TextureRect" parent="Slots/Amulet"]
margin_left = 16.5181
margin_top = 21.8847
margin_right = 166.518
margin_bottom = 171.885
texture = ExtResource( 8 )

[node name="bigicon" type="TextureRect" parent="Slots/Amulet"]
visible = false
margin_left = -534.411
margin_top = 51.0644
margin_right = -184.411
margin_bottom = 401.064
texture = ExtResource( 6 )

[node name="desc" type="RichTextLabel" parent="Slots/Amulet"]
visible = false
margin_left = 742.346
margin_top = 47.938
margin_right = 1111.35
margin_bottom = 401.938
custom_colors/default_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
custom_fonts/normal_font = SubResource( 5 )
text = "Sol de Echenique es un un pectoral de la cultura preincaica de Marcavalle en el Cusco y que calculaba su antigüedad en 3000 años por lo que sería un objeto contemporáneo a las culturas Paracas y Chavín. Tambien  se especula que sería un adorno que portarían sólo los gobernantes incas"

[node name="title" type="Label" parent="Slots/Amulet"]
visible = false
margin_left = -19.4331
margin_top = -224.058
margin_right = 560.567
margin_bottom = -147.058
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.160784, 0.160784, 0.160784, 1 )
custom_fonts/font = SubResource( 4 )
text = "SOL DE ECHENIQUE"
align = 1
valign = 1
clip_text = true
uppercase = true

[node name="Llama" type="Button" parent="Slots"]
margin_left = 892.0
margin_top = 297.0
margin_right = 1072.0
margin_bottom = 491.0
rect_scale = Vector2( 1.02917, 0.959573 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 3 )

[node name="icon" type="TextureRect" parent="Slots/Llama"]
margin_left = 16.5181
margin_top = 19.8005
margin_right = 166.518
margin_bottom = 169.8
texture = ExtResource( 7 )

[node name="bigicon" type="TextureRect" parent="Slots/Llama"]
visible = false
margin_left = -736.516
margin_top = 38.5588
margin_right = -386.516
margin_bottom = 388.559
texture = ExtResource( 5 )

[node name="desc" type="RichTextLabel" parent="Slots/Llama"]
visible = false
margin_left = 537.326
margin_top = 46.8958
margin_right = 906.326
margin_bottom = 400.896
custom_colors/default_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
custom_fonts/normal_font = SubResource( 5 )
text = "Es una estatuilla procedente de Perú, entre los años 1400-1550 n. e. Esta minúscula llama es de oro, sustancia clave en la mitología Inca, es tan pequeña que cabe en la palma de la mano y mide sólo un poco más de 5 centímetros de alto.
"

[node name="title" type="Label" parent="Slots/Llama"]
visible = false
margin_left = -224.453
margin_top = -225.1
margin_right = 355.547
margin_bottom = -148.1
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.160784, 0.160784, 0.160784, 1 )
custom_fonts/font = SubResource( 4 )
text = "LLAMA DE ORO"
align = 1
valign = 1
clip_text = true
uppercase = true

[node name="Button3" type="Button" parent="Slots"]
margin_left = 1101.0
margin_top = 298.0
margin_right = 1281.0
margin_bottom = 492.0
rect_scale = Vector2( 1.02917, 0.959573 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 3 )

[node name="Button4" type="Button" parent="Slots"]
margin_left = 683.0
margin_top = 494.0
margin_right = 863.0
margin_bottom = 688.0
rect_scale = Vector2( 1.02917, 0.959573 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 3 )

[node name="Button5" type="Button" parent="Slots"]
margin_left = 894.0
margin_top = 495.0
margin_right = 1074.0
margin_bottom = 689.0
rect_scale = Vector2( 1.02917, 0.959573 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 3 )

[node name="Button6" type="Button" parent="Slots"]
margin_left = 1103.0
margin_top = 496.0
margin_right = 1283.0
margin_bottom = 690.0
rect_scale = Vector2( 1.02917, 0.959573 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 3 )

[node name="Button7" type="Button" parent="Slots"]
margin_left = 684.0
margin_top = 688.0
margin_right = 864.0
margin_bottom = 882.0
rect_scale = Vector2( 1.02917, 0.959573 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 3 )

[node name="Button8" type="Button" parent="Slots"]
margin_left = 895.0
margin_top = 689.0
margin_right = 1075.0
margin_bottom = 883.0
rect_scale = Vector2( 1.02917, 0.959573 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 3 )

[node name="Button9" type="Button" parent="Slots"]
margin_left = 1104.0
margin_top = 690.0
margin_right = 1284.0
margin_bottom = 884.0
rect_scale = Vector2( 1.02917, 0.959573 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 3 )

[node name="title" type="Label" parent="."]
visible = false
margin_left = 671.0
margin_top = 83.0
margin_right = 1251.0
margin_bottom = 160.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.160784, 0.160784, 0.160784, 1 )
custom_fonts/font = SubResource( 4 )
text = "DEFAULT"
align = 1
valign = 1
clip_text = true
uppercase = true

[node name="Close" type="Button" parent="."]
margin_left = 1761.0
margin_top = 33.0
margin_right = 1773.0
margin_bottom = 53.0
rect_scale = Vector2( 9.94036, 5.31843 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )

[connection signal="mouse_entered" from="Slots/Amulet" to="." method="_on_Amulet_mouse_entered"]
[connection signal="pressed" from="Slots/Amulet" to="." method="_on_Amulet_pressed"]
[connection signal="pressed" from="Slots/Llama" to="." method="_on_Llama_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
